Fix broken layout apart from techMaps

--- a/front/src/components/PlanTechMapsMenu.css
+++ b/front/src/components/PlanTechMapsMenu.css
@@ -7,8 +7,8 @@
   padding: 0 0 0 20px;
 }
 
-.planTechMapsMenuHeader h6 {
-  font-family: 'Fira Sans Bold';
+.planTechMapsMenuHeader span {
+  font-weight: bold;
   padding: 0;
   margin: 0 0 0 4px;
   display: inline-block;
